--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,12 +1,13 @@
   #projects {
-    margin: 0 auto;
+    margin: 5em auto 5em;
     width: 54%;
     max-width: 54vw;
     position: relative;
-    padding: 5rem 0 5rem;
-    margin: 0 auto;
+    padding: 1em;
     height: auto;
     contain: layout;
+    background-color: #000;
+    box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1)
   }
 
   #the-design {
@@ -34,6 +35,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    text-align: center;
     height: auto;
     margin: 1em auto 2em;
     background-color: #fff;
@@ -42,7 +44,13 @@
   }
 
   #project-title h2 {
-    font-size: clamp(1rem, 2vw, 2rem);
+    font-size: clamp(1rem, 2.5rem, 3rem);
+    height: auto;
+    width: 100%;
+  }
+
+  #project-title h3 {
+    font-size: clamp(1rem, 2rem, 2.5rem);
     height: auto;
     width: 100%;
   }
@@ -75,8 +83,7 @@
     min-height: clamp(30rem, 90vh, 58.125rem);
   }
 
-  .grade-title,
-  .article-global-container {
+  .grade-title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,9 +100,9 @@
     margin: 0 auto
   }
 
-  .author-bio p,
-  .author-bio p i,
-  .author-bio strong {
+  .author-bio-text p,
+  .author-bio-text p i,
+  .author-bio-text strong {
     color: #fff;
     font-size: 1.2rem;
   }
@@ -129,9 +136,11 @@
     overflow: hidden;
   }
 
-  .author-bio {
+  .author-bio-text {
     background-color: #000;
     color: #0bd6e2;
+    padding: 1em;
+    text-align: center;
   }
 
   .author-bio img {
@@ -357,18 +366,12 @@
     padding: .2em 1em
   }
 
-  .wireframe {
-    height: auto;
-    width: 100%;
-    max-width: 100vw;
-    contain: paint;
-    overflow: hidden;
-    padding: 0.2em;
-    margin: 0 auto;
-  }
-
   .hidden {
     display: none
+  }
+
+  .takeme-text {
+    text-align: center;
   }
 
   @media (max-width:1024px) {
@@ -376,9 +379,9 @@
       width: 75%;
       max-width: 75vw;
       height: auto;
-      margin: 0 auto 2em;
+      margin: 3em auto 3em;
       aspect-ratio: auto;
-      padding: 5rem 0 5rem;
+      padding: 1em;
       contain: layout;
     }
 
@@ -401,8 +404,9 @@
       width: 75%;
       max-width: 75vw;
       height: auto;
-      margin: 0 auto 2em;
+      margin: 3em auto 3em;
       aspect-ratio: auto;
+      padding: 1em;
       contain: layout;
     }
   }
@@ -596,13 +600,10 @@
       height: auto;
       contain: layout;
       max-width: 90vw;
-      padding: 0.1em;
-    }
-
-    .black-container {
-      width: 100%;
-      max-width: 100vw;
-      height: auto;
+      margin: 3em auto 3em;
+      aspect-ratio: auto;
+      padding: 1em;
+      aspect-ratio: 432 / 22000;
     }
 
     .border-white {
