--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -2,8 +2,7 @@
     margin: 5em auto 5em;
     width: 54%;
     max-width: 54vw;
-    position: relative;
-    padding: 1em;
+    padding: 2em 1em;
     height: auto;
     contain: layout;
     background-color: #000;
@@ -13,21 +12,10 @@
   #the-design {
     margin: 0 auto;
     height: auto;
+    width: 100%;
+    max-width: 100vw;
     contain: layout;
     padding: 0.1em;
-  }
-
-  .design {
-    min-height: clamp(40rem, 60vh, 80rem);
-    height: auto;
-  }
-
-  .grade-grid img,
-  .hubspot img {
-    margin: 0 auto;
-    width: 100%;
-    height: auto;
-    object-fit: cover
   }
 
   #project-title {
@@ -47,18 +35,21 @@
     font-size: clamp(1rem, 2.5rem, 3rem);
     height: auto;
     width: 100%;
+    line-height: 1.6;
   }
 
   #project-title h3 {
     font-size: clamp(1rem, 2rem, 2.5rem);
     height: auto;
     width: 100%;
+    line-height: 1.6;
   }
 
   .author-bio-text h2 {
     font-size: 1.8rem;
     width: 100%;
     height: auto;
+    line-height: 1.4;
   }
 
   .author-bio-text p i,
@@ -68,19 +59,7 @@
   }
 
   #section1 {
-    min-height: clamp(42rem, 84vh, 81.43rem);
-  }
-
-  #section2 {
-    min-height: clamp(39rem, 78vh, 76.125rem);
-  }
-
-  #section3 {
-    min-height: clamp(10rem, 25vh, 19.5rem);
-  }
-
-  #section4 {
-    min-height: clamp(30rem, 90vh, 58.125rem);
+    margin: 4em auto;
   }
 
   .grade-title {
@@ -134,6 +113,7 @@
     height: auto;
     max-width: 100vw;
     overflow: hidden;
+    margin: 6em auto;
   }
 
   .author-bio-text {
@@ -153,110 +133,108 @@
     margin: 0 auto;
   }
 
-  .grade-table,
+  #grade-table-img1,
+  #grade-table-img2,
+  #pagespeed-grade-img1,
   .author-img-wrapper,
   .wireframe-img,
-  .hubspot,
+  #hubspot,
   .cute-robot,
   .cta-section,
-  .grade-img,
-  .mood-board,
+  #grade-img,
+  #mood-board,
   .past-meets-future,
-  .pagespeed-grade-img,
+  #pagespeed-grade-img1,
+  #pagespeed-grade-img2,
+  #pagespeed-grade-img3,
   .project-img {
-    width: 100%;
-    max-width: 100vw;
+    width: 90%;
+    max-width: 90vw;
     height: auto;
-    margin: 0 auto;
     padding: 0.02em;
   }
 
-  .grade-table img,
+  #grade-table-img1 img,
+  #grade-table-img2 img,
   .author-img-wrapper img,
   .wireframe-img img,
-  .hubspot img,
+  #hubspot img,
   .cute-robot img,
   .cta-section img,
-  .grade-img img,
-  .mood-baord img,
+  #mood-baord img,
   .past-meets-future img,
-  .pagespeed-grade-img img,
+  #pagespeed-grade-img1 img,
+  #pagespeed-grade-img2 img,
+  #pagespeed-grade-img3 img,
   .project-img img,
-  .grade-img img {
+  #grade-img img {
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: auto;
     object-fit: cover;
     box-sizing: border-box;
-    margin: 0 auto;
     aspect-ratio: inherit;
     padding: 0.02em;
+    margin: 1.5em auto;
   }
 
   .gradie-img {
-    aspect-ratio: 664 / 532;
+    aspect-ratio: ;
   }
 
-  #pagespeed-img-2,
-  #pagespeed-img-1 {
+  #pagespeed-grade-img2 img,
+  #pagespeed-grade-img1 img {
     aspect-ratio: 633 / 641;
   }
 
-  #pagespeed-img-3 {
+  #pagespeed-grade-img3 img {
     aspect-ratio: 625 / 591;
   }
 
-  #pagespeed-img-4 {
+  #pagespeed-grade-img4 img {
     aspect-ratio: 625 / 518;
   }
 
-  #grade-table {
-    aspect-ratio: 694 / 543;
+  #grade-table-img1 img {
+    aspect-ratio: 409 / 344;
   }
 
-  .hubspot {
+  #grade-table-img2 img {
+    aspect-ratio: 405 / 344;
+  }
+
+  #hubspot img {
     aspect-ratio: 657 / 932;
   }
 
-  .author-img-wrapper {
+  #author-img-wrapper img {
     aspect-ratio: 664 / 289;
   }
 
-  .mood-board {
-    aspect-ratio: 730 / 641;
+  #mood-board img {
+    aspect-ratio: 364 / 305;
   }
 
-  .past-meets-future {
+  #past-meets-future img {
     aspect-ratio: 730 / 840;
   }
 
-  #wireframe-img-3,
-  #wireframe-img-1 {
-    aspect-ratio: 723 / 2194;
+  #wireframe-img3 img,
+  #wireframe-img1 img {
+    aspect-ratio: 945 / 3000;
   }
 
-  #wireframe-img-2 {
+  #wireframe-img2 {
     aspect-ratio: 723 / 1223;
   }
 
-  .cute-robot {
+  .cute-robot img {
     aspect-ratio: 730 / 548;
   }
 
   .cta-section p {
     font-size: 1.3rem;
     width: 100%;
-    height: auto
-  }
-
-  .grade-grid,
-  .hubspot {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5em;
-    margin: 0 auto;
-    width: 95%;
-    max-width: 95%;
     height: auto
   }
 
@@ -395,7 +373,6 @@
       width: 93%;
       max-width: 93vw;
       height: auto;
-      min-height: 5rem
     }
   }
 
@@ -522,16 +499,6 @@
       height: auto;
     }
 
-    .author-bio img,
-    .cta-section img {
-      width: 100%;
-      height: auto;
-      margin: 0 auto;
-      object-fit: cover;
-      aspect-ratio: inherit;
-      min-height: 9.3125rem;
-    }
-
     .author-bio-text,
     .cta-section img {
       margin: 1em auto
@@ -540,13 +507,13 @@
     .author-bio h2 {
       font-size: clamp(1.1rem, 2vw, 1.3rem);
       height: auto;
-      min-height: 1.1rem;
+      line-height: 1.2;
     }
 
     .author-bio p {
       font-size: 1rem;
       height: auto;
-      min-height: 1rem;
+      line-height: 1.2;
     }
 
     .author-bio-text {
@@ -556,7 +523,7 @@
     .list-items ul li {
       color: #fff;
       width: 75%;
-      min-height: 1rem;
+      line-height: 1.2;
     }
   }
 
@@ -568,7 +535,7 @@
   }
 
   @media (max-width:480px) {
-    #grade-table img {
+    #grade-table-img1 img {
       width: 96%;
       max-width: 96vw;
     }
@@ -626,45 +593,39 @@
       aspect-ratio: 370 / 297;
     }
 
-    #pagespeed-img-2,
-    #pagespeed-img-1 {
-      aspect-ratio: 354 / 359;
-    }
+    #pagespeed-grade-img2 img,
+    #pagespeed-grade-img1 img aspect-ratio: 354 / 359;
+  }
 
-    #pagespeed-img-3 {
-      aspect-ratio: 346 / 327;
-    }
+  #pagespeed-grade-img3 img {
+    aspect-ratio: 346 / 327;
+  }
 
-    #pagespeed-img-4 {
-      aspect-ratio: 346 / 342;
-    }
+  #pagespeed-grade-img4 img {
+    aspect-ratio: 346 / 342;
+  }
 
-    .hubspot {
-      aspect-ratio: 362 / 514;
-    }
+  #hubspot img {
+    aspect-ratio: 362 / 514;
+  }
 
-    .author-img-wrapper {
-      aspect-ratio: 340 / 149;
-    }
+  #author-img-wrapper img {
+    aspect-ratio: 340 / 149;
+  }
 
-    .mood-board {
-      aspect-ratio: 403 / 367;
-    }
+  #past-meets-future img {
+    aspect-ratio: 403 / 477;
+  }
 
-    .past-meets-future {
-      aspect-ratio: 403 / 477;
-    }
+  #wireframe-img-3 img,
+  #wireframe-img-1 img {
+    aspect-ratio: 396 / 1219;
+  }
 
-    #wireframe-img-3,
-    #wireframe-img-1 {
-      aspect-ratio: 396 / 1219;
-    }
+  #wireframe-img-2 img {
+    aspect-ratio: 396 / 684;
+  }
 
-    #wireframe-img-2 {
-      aspect-ratio: 396 / 684;
-    }
-
-    .cute-robot {
-      aspect-ratio: 403 / 314;
-    }
+  .cute-robot img {
+    aspect-ratio: 403 / 314;
   }
