--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -40,7 +40,6 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  min-height: unset;
   max-width: 100vw;
 }
 
@@ -233,7 +232,6 @@ nav {
   height: 90%;
   width: auto;
   max-width: 12rem;
-  min-height: 7.25rem;
   overflow: hidden;
   justify-content: center;
   align-items: center;
@@ -331,7 +329,6 @@ img[fetchpriority=high] {
   align-items: center;
   text-align: center;
   height: auto;
-  min-height: 3rem;
   width: 40vw;
   max-width: 40vw;
   padding: 2em 0;
@@ -409,19 +406,27 @@ footer {
 }
 
 .fancy-border {
-  background: #fff;
-  box-shadow:
-    0 0 0 1em #011,
-    /* outer black */
-    0 0 0 2em #fff,
-    /* white buffer */
-    0 0 0 3em #011;
-  /* final black */
+  border: 1em solid black;
+  outline: 1em solid white;
+  outline-offset: 1em;
   padding: 2em;
-  margin: 1.875em auto;
+  margin: 1.875em auto 2em;
   width: 95%;
   max-width: 100%;
-  height: 100%;
+  height: auto;
+}
+
+.fancy-border-img {
+  border: 1em solid white;
+  outline: 0.2em solid white;
+  outline-offset: 1.5em;
+  padding: 1em;
+  margin: 1.875em auto 2em;
+  width: 90%;
+  max-width: 90vw;
+  height: auto;
+  max-height: auto;
+  margin: 6em auto 6em;
 }
 
 .hamburger-icon {
@@ -450,7 +455,6 @@ footer {
   z-index: 999;
   width: auto;
   min-width: 6rem;
-  min-height: 7rem;
   padding: .5rem 1rem;
   background-color: #000;
   color: #fff;
@@ -560,7 +564,7 @@ footer {
   border: .3vh solid #fff;
   width: 95%;
   height: auto;
-  margin: 1em auto
+  margin: 4em auto 0;
 }
 
 .border-white {
@@ -579,7 +583,6 @@ footer {
 .resume-date {
   width: 90%;
   height: auto;
-  min-height: 2rem;
   margin: 0 auto;
   max-width: 90%;
   padding: 0
@@ -594,9 +597,13 @@ footer {
 }
 
 .resume-summary {
-  width: 100%;
   height: auto;
   padding: 2em 1em;
+  border: .3vh solid #fff;
+  width: 97%;
+  max-width: 97vw;
+  height: auto;
+  margin: 1em auto
 }
 
 .resume-summary a {
@@ -747,7 +754,6 @@ button.submit-button:hover {
     display: flex;
     width: 3.5vw;
     height: auto;
-    min-height: 1rem;
     aspect-ratio: 1/1
   }
 
@@ -778,10 +784,6 @@ button.submit-button:hover {
     max-width: 100%;
     height: auto;
     padding: .9375em 0
-  }
-
-  .side-nav {
-    min-height: 6rem
   }
 
 }
@@ -868,7 +870,6 @@ button.submit-button:hover {
     width: 4.2vw;
     height: auto;
     aspect-ratio: 1/1;
-    min-height: 1rem
   }
 
   .hamburger-nav-links {
@@ -923,18 +924,11 @@ button.submit-button:hover {
     margin: 0 auto
   }
 
-  .side-nav {
-    min-height: 17.5rem
-  }
 }
 
 @media (max-width: 680px) {
   .canvas-skills-grid img {
     aspect-ratio: 655 / 388;
-  }
-
-  .resume-summary {
-    min-height: auto;
   }
 }
 
@@ -942,7 +936,6 @@ button.submit-button:hover {
 
   .canvas-skills-grid {
     aspect-ratio: 480 / 480;
-    min-height: 27.5rem;
   }
 
   .canvas-skills-grid img {
@@ -950,7 +943,6 @@ button.submit-button:hover {
   }
 
   .side-nav {
-    min-height: 15.5rem;
     height: auto;
     aspect-ratio: 456/238;
   }
@@ -986,12 +978,10 @@ button.submit-button:hover {
     max-width: 100vw;
     height: auto;
     max-height: 480px;
-    min-height: 29rem;
   }
 
   .canvas-skills-title {
     height: auto;
-    min-height: 11.62rem;
     width: 90%;
     max-width: 90vw;
     margin: 1em auto;
@@ -1006,12 +996,11 @@ button.submit-button:hover {
 
   .canvas-skills-title h1 {
     font-size: 2.5rem;
-    min-height: 3.5rem;
-
+    line-height: 1.8;
   }
 
   .canvas-skills-title h2 {
     font-size: 2rem;
-    min-height: 3rem;
+    line-height: 1.6
   }
 }
