--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -3,7 +3,10 @@
     width: 54%;
     max-width: 54vw;
     padding: 2em 1em;
+    width: 100%;
     height: auto;
+    min-height: 100vh;
+    overflow-x: hidden;
     contain: layout;
     background-color: #000;
     box-shadow: 0 .25em .5em rgba(0, 0, 0, .4), inset 0 0 .625em rgba(255, 255, 255, .1)
@@ -18,7 +21,7 @@
     padding: 0.1em;
   }
 
-  #project-title {
+  .project-title {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,14 +34,14 @@
     padding: 1em;
   }
 
-  #project-title h2 {
+  .project-title h2 {
     font-size: clamp(1rem, 2.5rem, 3rem);
     height: auto;
     width: 100%;
     line-height: 1.6;
   }
 
-  #project-title h3 {
+  .project-title h3 {
     font-size: clamp(1rem, 2rem, 2.5rem);
     height: auto;
     width: 100%;
@@ -97,10 +100,6 @@
     margin: 1em auto
   }
 
-  .pagespeed-container {
-    margin: 1em auto
-  }
-
   .grades {
     display: flex;
     flex-direction: column;
@@ -123,7 +122,7 @@
     text-align: center;
   }
 
-  .author-bio img {
+  .author-bio-container img {
     display: block;
     width: 100%;
     height: auto;
@@ -147,6 +146,7 @@
   #pagespeed-grade-img1,
   #pagespeed-grade-img2,
   #pagespeed-grade-img3,
+  #pagespeed-grade-img4,
   .project-img {
     width: 90%;
     max-width: 90vw;
@@ -166,6 +166,7 @@
   #pagespeed-grade-img1 img,
   #pagespeed-grade-img2 img,
   #pagespeed-grade-img3 img,
+  #pagespeed-grade-img4 img,
   .project-img img,
   #grade-img img {
     display: block;
@@ -178,54 +179,57 @@
     margin: 1.5em auto;
   }
 
-  .gradie-img {
-    aspect-ratio: ;
+  .gradie-img img {
+    aspect-ratio: 617 / 531;
   }
 
   #pagespeed-grade-img2 img,
   #pagespeed-grade-img1 img {
-    aspect-ratio: 633 / 641;
+    aspect-ratio: 617 / 653;
   }
 
   #pagespeed-grade-img3 img {
-    aspect-ratio: 625 / 591;
+    aspect-ratio: 617 / 627;
   }
 
   #pagespeed-grade-img4 img {
-    aspect-ratio: 625 / 518;
+    aspect-ratio: 617 / 655;
   }
 
   #grade-table-img1 img {
-    aspect-ratio: 409 / 344;
+    aspect-ratio: 637 / 535;
   }
 
   #grade-table-img2 img {
-    aspect-ratio: 405 / 344;
+    aspect-ratio: 637 / 539;
   }
 
   #hubspot img {
-    aspect-ratio: 657 / 932;
+    aspect-ratio: 617 / 881;
   }
 
-  #author-img-wrapper img {
-    aspect-ratio: 664 / 289;
+  .author-bio-container img {
+    aspect-ratio: 632 / 275;
   }
 
   #mood-board img {
-    aspect-ratio: 364 / 305;
+    aspect-ratio: 585 / 490;
   }
 
   #past-meets-future img {
-    aspect-ratio: 730 / 840;
+    aspect-ratio: 632 / 407;
   }
 
-  #wireframe-img3 img,
   #wireframe-img1 img {
-    aspect-ratio: 945 / 3000;
+    aspect-ratio: 585 / 1985;
+  }
+
+  #wireframe-img3 img {
+    aspect-ratio: 585 / 1990;
   }
 
   #wireframe-img2 {
-    aspect-ratio: 723 / 1223;
+    aspect-ratio: 585 / 1057;
   }
 
   .cute-robot img {
@@ -238,7 +242,7 @@
     height: auto
   }
 
-  .author-bio p {
+  .author-bio-text p {
     width: 100%;
     font-size: 1.3rem;
     padding: .3em;
@@ -356,11 +360,9 @@
     #projects {
       width: 75%;
       max-width: 75vw;
-      height: auto;
       margin: 3em auto 3em;
-      aspect-ratio: auto;
       padding: 1em;
-      contain: layout;
+
     }
 
     .resume-border {
@@ -369,22 +371,10 @@
       height: auto;
     }
 
-    .author-bio img {
+    .author-bio-container img {
       width: 93%;
       max-width: 93vw;
       height: auto;
-    }
-  }
-
-  @media (max-width: 940px) {
-    #projects {
-      width: 75%;
-      max-width: 75vw;
-      height: auto;
-      margin: 3em auto 3em;
-      aspect-ratio: auto;
-      padding: 1em;
-      contain: layout;
     }
   }
 
@@ -405,7 +395,7 @@
       padding: .2em
     }
 
-    .author-bio,
+    .author-bio-container,
     .cta-section,
     .grade-img,
     .article-global-container,
@@ -413,8 +403,7 @@
       padding: .2em;
     }
 
-
-    #project-title,
+    .project-title,
     .pagespeed-grade-title {
       height: auto;
       margin: .2em auto 1em;
@@ -424,7 +413,7 @@
       padding: 0
     }
 
-    #project-title h2 {
+    .project-title h2 {
       font-size: clamp(1.5rem, 2vw, 2rem);
       color: #000;
       width: 100%;
@@ -493,7 +482,7 @@
       margin: 0 auto 1em;
     }
 
-    .author-bio,
+    .author-bio-container,
     .cta-section {
       max-width: 100%;
       height: auto;
@@ -504,13 +493,13 @@
       margin: 1em auto
     }
 
-    .author-bio h2 {
+    .author-bio-text h2 {
       font-size: clamp(1.1rem, 2vw, 1.3rem);
       height: auto;
       line-height: 1.2;
     }
 
-    .author-bio p {
+    .author-bio-text p {
       font-size: 1rem;
       height: auto;
       line-height: 1.2;
@@ -564,13 +553,7 @@
 
     #projects {
       width: 90%;
-      height: auto;
-      contain: layout;
       max-width: 90vw;
-      margin: 3em auto 3em;
-      aspect-ratio: auto;
-      padding: 1em;
-      aspect-ratio: 432 / 22000;
     }
 
     .border-white {
@@ -594,38 +577,40 @@
     }
 
     #pagespeed-grade-img2 img,
-    #pagespeed-grade-img1 img aspect-ratio: 354 / 359;
-  }
+    #pagespeed-grade-img1 img {
+      aspect-ratio: 354 / 359;
+    }
 
-  #pagespeed-grade-img3 img {
-    aspect-ratio: 346 / 327;
-  }
+    #pagespeed-grade-img3 img {
+      aspect-ratio: 346 / 327;
+    }
 
-  #pagespeed-grade-img4 img {
-    aspect-ratio: 346 / 342;
-  }
+    #pagespeed-grade-img4 img {
+      aspect-ratio: 346 / 342;
+    }
 
-  #hubspot img {
-    aspect-ratio: 362 / 514;
-  }
+    #hubspot img {
+      aspect-ratio: 362 / 514;
+    }
 
-  #author-img-wrapper img {
-    aspect-ratio: 340 / 149;
-  }
+    #author-img-wrapper img {
+      aspect-ratio: 340 / 149;
+    }
 
-  #past-meets-future img {
-    aspect-ratio: 403 / 477;
-  }
+    #past-meets-future img {
+      aspect-ratio: 403 / 477;
+    }
 
-  #wireframe-img-3 img,
-  #wireframe-img-1 img {
-    aspect-ratio: 396 / 1219;
-  }
+    #wireframe-img-3 img,
+    #wireframe-img-1 img {
+      aspect-ratio: 396 / 1219;
+    }
 
-  #wireframe-img-2 img {
-    aspect-ratio: 396 / 684;
-  }
+    #wireframe-img-2 img {
+      aspect-ratio: 396 / 684;
+    }
 
-  .cute-robot img {
-    aspect-ratio: 403 / 314;
+    .cute-robot img {
+      aspect-ratio: 403 / 314;
+    }
   }
