--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -293,6 +293,7 @@ nav {
   box-sizing: border-box;
   min-height: 20rem;
   contain: layout;
+
 }
 
 .canvas-skills-grid img {
@@ -589,26 +590,6 @@ footer {
   max-width: 100vw
 }
 
-.resume-border {
-  border: .3vh solid #fff;
-  width: 95%;
-  height: auto;
-  margin: 4em auto 0;
-}
-
-.border-white {
-  border: 1em solid #fff;
-  margin: 30px auto;
-  width: 95%;
-  max-width: 100%;
-  height: auto;
-  padding: .9375em 0
-}
-
-#resume-border {
-  padding-bottom: 0
-}
-
 .resume-date {
   width: 90%;
   height: auto;
@@ -762,7 +743,6 @@ button.submit-button:hover {
 
 
 @media (max-width:1024px) {
-
   .nav-links {
     display: none
   }
@@ -803,14 +783,6 @@ button.submit-button:hover {
     display: flex
   }
 
-  .border-white {
-    border: .5em solid #fff;
-    margin: 1em auto;
-    width: 95%;
-    max-width: 100%;
-    height: auto;
-    padding: .9375em 0
-  }
 
 }
 
@@ -821,11 +793,12 @@ button.submit-button:hover {
     height: auto;
     width: 100%;
     max-width: 100vw;
+    aspect-ratio: 940 / 819;
   }
 
   .canvas-skills-grid img {
     min-height: 24.875rem;
-    aspect-ratio: 916 / 496;
+    aspect-ratio: 940 / 508;
   }
 
   img[fetchpriority=high] {
@@ -857,9 +830,12 @@ button.submit-button:hover {
 }
 
 @media (max-width:768px) {
+  .canvas-skills-grid {
+    aspect-ratio: 768 / 800;
+  }
+
   .cavnas-skills-grid img {
     min-height: 25rem;
-    aspect-ratio: 740 / 399;
   }
 
   .canvas-skills-title {
@@ -967,6 +943,10 @@ button.submit-button:hover {
 }
 
 @media (max-width: 680px) {
+  .canvas-skills-grid {
+    aspect-ratio: 680 / 640;
+  }
+
   .canvas-skills-grid img {
     min-height: 22rem;
     aspect-ratio: 680 / 381;
@@ -1030,14 +1010,14 @@ button.submit-button:hover {
 
   .canvas-skills-grid {
     min-height: 38rem;
-    aspect-ratio: 480 / 608;
+    aspect-ratio: 480 / 670;
   }
 
   .canvas-skills-title {
     height: auto;
     width: 90%;
     max-width: 90vw;
-    margin: 1em auto;
+    margin: 1em auto 2em;
     min-height: 300px;
   }
 
@@ -1057,4 +1037,5 @@ button.submit-button:hover {
     font-size: 2rem;
     line-height: 1.6
   }
+
 }
