--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -1,10 +1,12 @@
   #projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
     margin: 5em auto 5em;
     width: 54%;
     max-width: 54vw;
     padding: 2em 1em;
     height: auto;
-    min-height: 100vh;
     overflow-x: hidden;
     contain: layout;
     background-color: #000;
