--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -6,7 +6,11 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
+  ascent-override: 92%;
+  descent-override: 8%;
+  line-gap-override: 0%;
 }
+
 
 @font-face {
   font-family: 'Segoe UI';
@@ -14,6 +18,9 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
+  ascent-override: 92%;
+  descent-override: 8%;
+  line-gap-override: 0%;
 }
 
 
@@ -290,10 +297,11 @@ nav {
   align-items: stretch;
   width: 100%;
   max-width: 100vw;
+  height: auto;
   box-sizing: border-box;
   min-height: 20rem;
   contain: layout;
-
+  aspect-ratio: 1492 / 333;
 }
 
 .canvas-skills-grid img {
@@ -307,7 +315,7 @@ nav {
   border-right: 0.5em solid #000;
   flex: 1;
   min-height: 20rem;
-  aspect-ratio: 585 / 320;
+  aspect-ratio: 609 / 333;
 }
 
 img[fetchpriority=high] {
