--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -300,7 +300,7 @@ nav {
   max-width: 100vw;
   height: auto;
   box-sizing: border-box;
-  min-height: 20rem;
+  min-height: 25rem;
   contain: layout;
   overflow: hidden;
   background-color: #000;
@@ -312,7 +312,7 @@ nav {
   height: auto;
   overflow: hidden;
   background-color: #000;
-  min-height: 20rem;
+  min-height: 25rem;
   object-fit: cover;
   margin: 0 auto;
   border: 1em solid #000;
@@ -341,7 +341,7 @@ img[fetchpriority=high] {
   height: auto;
   max-height: 100%;
   line-height: 1.4;
-  min-height: 20rem;
+  min-height: 25rem;
 }
 
 .canvas-skills-title h1,
@@ -810,15 +810,15 @@ button.submit-button:hover {
     height: auto;
     width: 100%;
     max-width: 100vw;
-    min-height: clamp(20rem, 45vh, 60rem);
+    min-height: clamp(600px, 95vw, 853px);
     margin: 0 auto;
   }
 
   .canvas-skills-grid img {
     border: 1em solid black;
-    min-height: 14rem;
     height: auto;
     max-height: 100%;
+    min-height: clamp(700px, 95vw, 853px);
     width: 100%;
     max-width: 100vw;
     background-color: #000;
@@ -863,10 +863,6 @@ button.submit-button:hover {
     height: auto;
     max-height: auto;
     margin: 3em auto 3em;
-  }
-
-  .canvas-skills-grid {
-    min-height: clamp(15rem, 40vh, 50rem);
   }
 
   .canvas-skills-title {
@@ -975,6 +971,7 @@ button.submit-button:hover {
 
 @media (max-width: 680px) {
 
+
   .canvas-skills-grid img {
     min-height: 22rem;
   }
@@ -1015,7 +1012,6 @@ button.submit-button:hover {
     aspect-ratio: 456/238;
   }
 
-  h1,
   h2 {
     line-height: 1.7;
     padding: 0.3em;
@@ -1042,13 +1038,7 @@ button.submit-button:hover {
   }
 
   .cavnas-skills-grid img {
-    min-height: 100%;
-    aspect-ratio: 480 / 352;
     border: 1em solid black;
-  }
-
-  .canvas-skills-grid {
-    min-height: 38rem;
   }
 
   .canvas-skills-title {
@@ -1056,7 +1046,7 @@ button.submit-button:hover {
     width: 90%;
     max-width: 90vw;
     margin: 1em auto 2em;
-    min-height: 300px;
+    min-height: 200px;
   }
 
   .canvas-skills-title h1,
