--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -224,6 +224,9 @@ nav {
   height: auto;
   max-width: 100vw;
   background-color: #000;
+  min-height: 4rem;
+  font-family: "Segoe UI", Helvetica, sans-serif;
+  font-display: optional;
 }
 
 .nav-links {
@@ -266,7 +269,6 @@ nav {
 
 .nav-logo {
   display: flex;
-  aspect-ratio: 240 / 105;
   height: 100%;
   width: auto;
   max-width: 12rem;
@@ -279,6 +281,7 @@ nav {
 .nav-logo img {
   width: 100%;
   height: 100%;
+  min-height: 5rem;
   display: block;
   object-fit: contain;
   padding: 1em 0;
@@ -317,8 +320,8 @@ nav {
   margin: 0 auto;
   border: 1em solid #000;
   border-right: 0.5em solid #000;
-  flex: 1 1 50%;
-  min-height: clamp(18rem, 40vw, 28rem);
+  flex: 1 1 30%;
+  min-height: 28rem;
 }
 
 img[fetchpriority=high] {
@@ -330,7 +333,6 @@ img[fetchpriority=high] {
   background-color: white;
   border: 1em solid #000;
   border-left: 0.5em solid #000;
-  flex: 3;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -342,6 +344,9 @@ img[fetchpriority=high] {
   max-height: 100%;
   line-height: 1.4;
   min-height: 25rem;
+  flex: 1 1 70%;
+  min-height: 28rem;
+  contain: layout;
 }
 
 .canvas-skills-title h1,
@@ -373,16 +378,15 @@ img[fetchpriority=high] {
   width: 40vw;
   max-width: 40vw;
   padding: 2em 0;
-  aspect-ratio: 2.077/1;
   background-color: #000;
 }
 
 .footer-logo img {
   width: 100%;
   height: auto;
+  min-height: 17rem;
   display: block;
   object-fit: contain;
-  aspect-ratio: inherit;
   background-color: #000;
 }
 
@@ -779,7 +783,7 @@ button.submit-button:hover {
     display: flex;
     width: 3.5vw;
     height: auto;
-    aspect-ratio: 1/1
+    min-height: 3rem;
   }
 
   .hamburger-nav-links {
@@ -818,10 +822,10 @@ button.submit-button:hover {
     border: 1em solid black;
     height: auto;
     max-height: 100%;
-    min-height: clamp(700px, 95vw, 853px);
     width: 100%;
     max-width: 100vw;
     background-color: #000;
+    min-height: 33.8rem;
   }
 
   img[fetchpriority=high] {
@@ -871,7 +875,6 @@ button.submit-button:hover {
 
   .nav-logo {
     height: calc(200px / 2.38);
-    aspect-ratio: 2.38;
     width: auto;
     max-height: 105px;
     padding-left: 1em;
@@ -881,6 +884,7 @@ button.submit-button:hover {
   .nav-logo img {
     width: 100%;
     height: 100%;
+    min-height: 5rem;
     object-fit: contain;
     display: block
   }
@@ -911,8 +915,8 @@ button.submit-button:hover {
   .hamburger-icon {
     display: flex;
     width: 4.2vw;
+    min-height: 4rem;
     height: auto;
-    aspect-ratio: 1/1;
   }
 
   .hamburger-nav-links {
@@ -1009,7 +1013,7 @@ button.submit-button:hover {
 @media (max-width:480px) {
   .side-nav {
     height: auto;
-    aspect-ratio: 456/238;
+    min-height: 17rem;
   }
 
   h2 {
@@ -1029,7 +1033,6 @@ button.submit-button:hover {
   .hamburger-icon {
     width: 6.4vw;
     height: auto;
-    aspect-ratio: 1/1
   }
 
   .button-grid {
