updated min-heights desktop breakpoint

--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -200,17 +200,17 @@
     margin: 0.5em auto;
   }
 
-  .gradie-img {
-    min-height: 21.93rem;
+  .grade-img {
+    min-height: 42.31rem;
   }
 
   #pagespeed-grade-img2,
   #pagespeed-grade-img1 {
-    min-height: 40rem;
+    min-height: 49.826rem;
   }
 
   #pagespeed-grade-img3 {
-    min-height: 25.75rem;
+    min-height: 52.05rem;
   }
 
   #pagespeed-grade-img4 {
@@ -218,43 +218,43 @@
   }
 
   #grade-table-img1 {
-    min-height: 21.31rem;
+    min-height: 41.23rem;
   }
 
   #grade-table-img2 {
-    min-height: 22.125rem;
+    min-height: 41.483rem;
   }
 
   #hubspot {
-    min-height: 36.18rem;
+    min-height: 69.995rem;
   }
 
   .author-bio-container {
-    min-height: 11rem;
+    min-height: 21.98rem;
   }
 
   #mood-board {
-    min-height: 19.56rem;
+    min-height: 39.4625rem;
   }
 
   #past-meets-future {
-    min-height: 27.3125rem;
+    min-height: 30.349rem;
   }
 
   #wireframe-img1 {
-    min-height: 85.625rem;
+    min-height: 177.50rem;
   }
 
   #wireframe-img3 {
-    min-height: 58rem;
+    min-height: 177.95rem;
   }
 
   #wireframe-img2 {
-    min-height: 90.5rem;
+    min-height: 94.538rem;
   }
 
   #cute-robot {
-    min-height: 16.25rem;
+    min-height: 40.90rem;
   }
 
   .cta-section p {
