--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -158,7 +158,7 @@
   #grade-table-img2,
   #pagespeed-grade-img1,
   .author-img-wrapper,
-  .wireframe-img,
+  #wireframe-img2,
   #hubspot,
   #cute-robot,
   .cta-section,
@@ -172,14 +172,36 @@
   .project-img {
     width: 90%;
     max-width: 90vw;
-    height: 100%;
-    padding: 0.02em;
+    height: auto;
+    max-height: 90vw;
+    padding: 1em;
+  }
+
+  #wireframe-img1,
+  #wireframe-img3 {
+    width: 90%;
+    max-width: 900px;
+    margin: 6em auto;
+    padding: 1em;
+    overflow: hidden;
+    border: 1em solid white;
+    outline: 0.2em solid white;
+    outline-offset: 1.5em;
+    box-sizing: border-box;
+  }
+
+  #wireframe-img3 img,
+  #wireframe-img1 img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
   }
 
   #grade-table-img1 img,
   #grade-table-img2 img,
   .author-img-wrapper img,
-  .wireframe-img img,
+  #wireframe-img2 img,
   #hubspot img,
   #cute-robot img,
   .cta-section img,
@@ -191,70 +213,13 @@
   #pagespeed-grade-img4 img,
   .project-img img,
   #grade-img img {
-    display: block;
     width: 100%;
     height: auto;
-    object-fit: cover;
-    box-sizing: border-box;
-    padding: 0.02em;
-    margin: 0.5em auto;
-  }
-
-  .grade-img {
-    min-height: 42.31rem;
-  }
-
-  #pagespeed-grade-img2,
-  #pagespeed-grade-img1 {
-    min-height: 49.826rem;
-  }
-
-  #pagespeed-grade-img3 {
-    min-height: 52.05rem;
-  }
-
-  #pagespeed-grade-img4 {
-    min-height: 26.93rem;
-  }
-
-  #grade-table-img1 {
-    min-height: 41.23rem;
-  }
-
-  #grade-table-img2 {
-    min-height: 41.483rem;
-  }
-
-  #hubspot {
-    min-height: 69.995rem;
-  }
-
-  .author-bio-container {
-    min-height: 21.98rem;
-  }
-
-  #mood-board {
-    min-height: 39.4625rem;
-  }
-
-  #past-meets-future {
-    min-height: 30.349rem;
-  }
-
-  #wireframe-img1 {
-    min-height: 177.50rem;
-  }
-
-  #wireframe-img3 {
-    min-height: 177.95rem;
-  }
-
-  #wireframe-img2 {
-    min-height: 94.538rem;
-  }
-
-  #cute-robot {
-    min-height: 40.90rem;
+    max-width: 100vw;
+    object-fit: contain;
+    display: block;
+    margin: auto;
+    padding: 0.25em;
   }
 
   .cta-section p {
@@ -375,176 +340,9 @@
       max-width: 93vw;
       height: auto;
     }
-
-    #grade-img {
-      min-height: 29.70rem;
-    }
-
-    #pagespeed-grade-img2,
-    #pagespeed-grade-img1 {
-      min-height: 36.49rem;
-    }
-
-    #pagespeed-grade-img3 {
-      min-height: 36.4375rem;
-    }
-
-    #pagespeed-grade-img4 {
-      min-height: 36.033rem;
-    }
-
-    #grade-table-img1 {
-      min-height: 29.8125rem;
-    }
-
-    #grade-table-img2 {
-      min-height: 33.2rem;
-    }
-
-    #hubspot {
-      min-height: 50.4375rem;
-    }
-
-    .author-bio-container {
-      min-height: 15.533rem;
-    }
-
-    #mood-board {
-      min-height: 28.088rem;
-    }
-
-    #past-meets-future {
-      min-height: 39.075rem;
-    }
-
-    #wireframe-img3,
-    #wireframe-img1 {
-      min-height: 125.9375rem;
-    }
-
-    #wireframe-img2 {
-      min-height: 66.965rem;
-      height: auto;
-    }
-
-    #cute-robot {
-      min-height: 25.409rem;
-    }
-  }
-
-  @media (min-width: 769px) and (max-width: 940px) {
-    #grade-img {
-      min-height: 27rem;
-    }
-
-    #pagespeed-grade-img2,
-    #pagespeed-grade-img1 {
-      min-height: 33.205rem;
-    }
-
-    #pagespeed-grade-img3 {
-      min-height: 33.205rem;
-    }
-
-    #pagespeed-grade-img4 {
-      min-height: 32.789rem;
-    }
-
-    #grade-table-img1 {
-      min-height: 27.13rem;
-    }
-
-    #grade-table-img2 {
-      min-height: 27.131rem;
-    }
-
-    #hubspot {
-      min-height: 45.875rem;
-    }
-
-    .author-bio-container {
-      min-height: 13.97rem;
-    }
-
-    #mood-board {
-      min-height: 25.414rem;
-    }
-
-    #past-meets-future {
-      min-height: 35.35rem;
-    }
-
-    #wireframe-img3,
-    #wireframe-img1 {
-      min-height: 113.944rem;
-    }
-
-    #wireframe-img2 {
-      min-height: 60.58rem;
-      height: auto;
-    }
-
-    #cute-robot {
-      min-height: 23.123rem;
-    }
   }
 
   @media (max-width:768px) {
-
-    #grade-img {
-      min-height: 23.93rem;
-    }
-
-    #pagespeed-grade-img2,
-    #pagespeed-grade-img1 {
-      min-height: 29.375rem;
-    }
-
-    #pagespeed-grade-img3 {
-      min-height: 29.407rem;
-    }
-
-    #pagespeed-grade-img4 {
-      min-height: 29.03rem;
-    }
-
-    #grade-table-img1 {
-      min-height: 24 rem;
-    }
-
-    #grade-table-img2 {
-      min-height: 24rem;
-    }
-
-    #hubspot {
-      min-height: 40.645rem;
-    }
-
-    .author-bio-container {
-      min-height: 13.09rem;
-    }
-
-    #mood-board {
-      min-height: 23.89rem;
-    }
-
-    #past-meets-future {
-      min-height: 33.24rem;
-    }
-
-    #wireframe-img3,
-    #wireframe-img1 {
-      min-height: 107.13rem;
-    }
-
-    #wireframe-img2 {
-      min-height: 56.98rem;
-      height: auto;
-    }
-
-    #cute-robot {
-      min-height: 20.48rem;
-    }
 
     .article-global-container,
     .resume-border {
@@ -669,14 +467,6 @@
       max-width: 90vw;
     }
 
-    #project-title {
-      min-height: 6.75rem;
-    }
-
-    .gradie-img {
-      min-height: 21.93rem;
-    }
-
     #wireframe-img1,
     #wireframe-img2,
     #wireframe-img3,
@@ -691,60 +481,6 @@
     #grade-table-img1 {
       width: 85%;
       max-width: 85vw;
-    }
-
-    #grade-img {
-      min-height: 23.93
-    }
-
-    #pagespeed-grade-img2,
-    #pagespeed-grade-img1 {
-      min-height: 40rem;
-    }
-
-    #pagespeed-grade-img3 {
-      min-height: 25.75rem;
-    }
-
-    #pagespeed-grade-img4 {
-      min-height: 26.93rem;
-    }
-
-    #grade-table-img1 {
-      min-height: 21.31rem;
-    }
-
-    #grade-table-img2 {
-      min-height: 22.125rem;
-    }
-
-    #hubspot {
-      min-height: 36.18rem;
-    }
-
-    .author-bio-container {
-      min-height: 12.5rem;
-    }
-
-    #mood-board {
-      min-height: 19.56rem;
-    }
-
-    #past-meets-future {
-      min-height: 27.3125rem;
-    }
-
-    #wireframe-img3,
-    #wireframe-img1 {
-      min-height: 96.875rem;
-    }
-
-    #wireframe-img2 {
-      min-height: 51.5rem;
-    }
-
-    #cute-robot {
-      min-height: 20.375rem;
     }
   }
 
