added aspect ratio and min-height to hero img

--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -311,12 +311,14 @@ nav {
 .canvas-skills-grid picture,
 .canvas-skills-title {
   flex: 0 0 auto;
+
 }
 
 .canvas-skills-grid picture {
   flex: 0 0 40%;
   max-width: 40%;
   min-width: 40%;
+  min-height: 270px;
   display: block;
   background-color: #000;
   border: 1em solid #000;
