--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -160,8 +160,6 @@
   #grade-table-img2,
   #pagespeed-grade-img1,
   .author-img-wrapper,
-  #wireframe-img2,
-  #hubspot,
   #cute-robot,
   .cta-section,
   #grade-img,
@@ -179,6 +177,8 @@
     padding: 1em;
   }
 
+  .hubspot,
+  #wireframe-img2,
   #wireframe-img1,
   #wireframe-img3 {
     width: 90%;
@@ -192,6 +192,8 @@
     box-sizing: border-box;
   }
 
+  .hubspot img,
+  #wireframe-img2 img,
   #wireframe-img3 img,
   #wireframe-img1 img {
     width: 100%;
@@ -203,8 +205,6 @@
   #grade-table-img1 img,
   #grade-table-img2 img,
   .author-img-wrapper img,
-  #wireframe-img2 img,
-  #hubspot img,
   #cute-robot img,
   .cta-section img,
   #mood-baord img,
@@ -469,20 +469,73 @@
       max-width: 90vw;
     }
 
-    #wireframe-img1,
-    #wireframe-img2,
-    #wireframe-img3,
-    #hubspot,
-    #mood-baord,
+    #grade-table-img1,
+    #grade-table-img2,
+    #pagespeed-grade-img1,
+    .author-img-wrapper,
+    #cute-robot,
+    .cta-section,
+    #grade-img,
+    #mood-board,
     .past-meets-future,
     #pagespeed-grade-img1,
     #pagespeed-grade-img2,
     #pagespeed-grade-img3,
     #pagespeed-grade-img4,
-    #grade-table-img2,
-    #grade-table-img1 {
+    .project-img {
       width: 85%;
       max-width: 85vw;
+      height: auto;
+      max-height: 85vw;
+      padding: 1em;
+    }
+
+    .hubspot,
+    #wireframe-img2,
+    #wireframe-img1,
+    #wireframe-img3 {
+      width: 85%;
+      max-width: 680px;
+      margin: 6em auto;
+      padding: 1em;
+      overflow: hidden;
+      border: 1em solid white;
+      outline: 0.2em solid white;
+      outline-offset: 1.5em;
+      box-sizing: border-box;
+    }
+
+    .hubspot img,
+    #wireframe-img2 img,
+    #wireframe-img3 img,
+    #wireframe-img1 img {
+      width: 100%;
+      height: auto;
+      display: block;
+      object-fit: contain;
+    }
+
+    #wireframe-img2 img,
+    #grade-table-img1 img,
+    #grade-table-img2 img,
+    .author-img-wrapper img,
+    #cute-robot img,
+    .cta-section img,
+    #mood-baord img,
+    .past-meets-future img,
+    #pagespeed-grade-img1 img,
+    #pagespeed-grade-img2 img,
+    #pagespeed-grade-img3 img,
+    #pagespeed-grade-img4 img,
+    .project-img img,
+    #grade-img img {
+      width: 100%;
+      height: auto;
+      max-width: 100vw;
+      object-fit: contain;
+      display: block;
+      margin: auto;
+      padding: 0.25em;
     }
   }
 
